style[pages | components]: fix fixed gaps on registration page and form component

--- a/src/styles/Registration.module.css
+++ b/src/styles/Registration.module.css
@@ -5,7 +5,7 @@
 
 .main {
   flex: 1;
-  gap: 2rem;
+  gap: 4rem;
   display: flex;
   padding: 4rem 0;
   min-height: 100vh;
