--- a/src/styles/components/Forms/Register.module.css
+++ b/src/styles/components/Forms/Register.module.css
@@ -31,7 +31,7 @@
 }
 
 .form {
-  gap: 1rem;
+  gap: 2rem;
   width: 92%;
   display: flex;
   padding: 2rem auto;
